# csgo

./: .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  example.env  main.py  pyproject.toml
.github/workflows/: check-code-quality.yml
app/: app.py  dependencies.py  settings.py
app/api/v1/: __init__.py  predictions.py
app/data/profiles/: 10000.json  10001.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10008.json  10009.json  1001.json  10010.json  10011.json  10012.json  10013.json  10014.json  10015.json  10016.json  10017.json  10018.json  10019.json  1002.json  10020.json  10021.json  10022.json  10023.json  10024.json  10025.json  10026.json  10027.json  10028.json  10029.json  1003.json  10030.json  10031.json  10032.json  10033.json  10034.json  10035.json  10036.json  (+37043 more)
app/engines/: __init__.py  clickhouse.py  postgres.py
app/enums/: clickhouse.py
app/migrations/clickhouse/: 001_profile.sql
app/models/: __init__.py  base.py  game.py  map.py  player.py  round.py  statistic.py  team.py  team_player.py
app/utilities/: __init__.py
app/utilities/init_data/: init_clickhouse_data.py  init_postgres_data.py
